name:                max-presentation
version:             5.0.0.0
synopsis:            Give presentations as good as Max
homepage:            https://github.com/mxswd/presentation
license:             BSD3
license-file:        LICENSE
author:              Maxwell Swadling
maintainer:          maxwellswadling@gmail.com
copyright:           Copyright (c) 2018, Maxwell Swadling
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md
cabal-version:       >=1.10

executable maxpresentation
  main-is:             Main.hs
  other-modules:       Slide
  other-extensions:    OverloadedStrings, TemplateHaskell
  build-depends:       base >=4.11 && <4.12, template-haskell >=2.13 && <2.14, parsec >=3.1 && <3.2, text >=1.2 && <1.3, directory >=1.3 && <1.4, vty == 5.*, brick == 0.41.2, vector, word-wrap
  -- hs-source-dirs:
  ghc-options:         -threaded
  default-language:    Haskell2010
